--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/userhome/userhome.css">
+      <link rel="stylesheet" href="components/alerts/alerts.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/header/header.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -56,6 +57,7 @@
 
     <!-- Add your site or application content here -->
     <navbar></navbar>
+    <alerts></alerts>
     
     <input type="checkbox" id="nav-trigger" class="nav-trigger" />
     <label for="nav-trigger"></label>
@@ -112,11 +114,14 @@
       <script src="app/main/main.js"></script>
       <script src="app/userhome/userhome.controller.js"></script>
       <script src="app/userhome/userhome.js"></script>
+      <script src="components/alerts/alerts.controller.js"></script>
+      <script src="components/alerts/alerts.directive.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
+      <script src="components/common/common.service.js"></script>
       <script src="components/footer/footer.directive.js"></script>
       <script src="components/header/header.controller.js"></script>
       <script src="components/header/header.directive.js"></script>
