--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,6 +1,36 @@
 <div class="container ct-narrow">
   <div class="row">
     <div class="col-sm-12">
+      <form class="form" name="profileform" ng-submit="vm.updateProfile(profileform)" >
+        <div class="form-group">
+          <div class="pi-container">
+              <img ng-src="{{'data:image/jpg;base64,' + vm.currentUser.profileimage }}" class="profileimage" ng-hide="vm.uploading" name="profileimagecurrent" id="profileimagecurrent" />
+              <div class="img-save-overlay" ng-show="vm.imageSaving"><div class='uil-ball-css' style='-webkit-transform:scale(0.6)'><div></div></div></div>
+          </div>
+          <input type="file" id="profileimg" name="profileimg" class="inputfile" />
+          <label for="profileimg" class="btn btn-lg"><span class="glyphicon glyphicon-upload"></span>&nbsp;&nbsp;Upload Image</label>
+          <!-- invisible button click to force auto upload -->
+          <div ng-click="vm.uploadNewImage()" class="activeButInvisible" id="profileUploader">upload</div>
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" name="name" class="form-control" ng-model="vm.currentUser.name" />
+        </div>
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" name="email" class="form-control" ng-model="vm.currentUser.email"
+                mongoose-error />
+          <p class="help-block" ng-show="profileform.email.$error.mongoose">
+              {{ vm.errors.other }}
+          </p>
+        </div>
+
+        <p class="help-block"> {{ vm.message }} </p>
+
+        <button class="btn btn-lg btn-primary" type="submit">Save Profile</button>
+
+      </form>
+      <hr />
       <form class="form" name="form" ng-submit="vm.changePassword(form)" novalidate>
 
         <div class="form-group">
@@ -41,7 +71,7 @@
 
         <p class="help-block"> {{ vm.message }} </p>
 
-        <button class="btn btn-lg btn-primary" type="submit">Save changes</button>
+        <button class="btn btn-lg btn-primary" type="submit">Save Password</button>
       </form>
     </div>
   </div>
